--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">DansEcommerce</string>
+    <string name="app_name">Dan\'s Ecommerce</string>
     <string name="action_settings">Settings</string>
 </resources>
