--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Dan\'s Ecommerce</string>
     <string name="action_settings">Settings</string>
+    <string name="product_details">Product Details</string>
+    <string name="availability">See if it\'s available</string>
 </resources>
